--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,35 +19,33 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
+  flutter: ">=1.17.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   bruno: ^2.2.0
   flutter_screenutil: ^5.0.0+2
+  polkawallet_sdk: ^0.4.8
+  flutter_svg: ^1.0.3
+  json_annotation: ^4.4.0
+  mobx: ^2.0.7+4
+  flutter_mobx: ^2.0.6+1
+  get_storage: ^2.0.2
+  flustars: ^2.0.1
+  flukit: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.0.0
+  build_runner: ^2.2.0
+  mobx_codegen: ^2.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,9 +58,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
+  # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+    - assets/images/
+    - assets/images/2.0x/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
