--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   biometric_storage: ^4.1.1
   rive: ^0.9.0
   ele_progress: ^0.0.1
+  flutter_keyboard_visibility: ^5.3.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
