--- a/js_service/package.json
+++ b/js_service/package.json
@@ -20,10 +20,14 @@
   },
   "resolutions": {
     "@polkadot/api": "^8.5.1",
+    "@polkadot/util-crypto": "9.2.1",
+    "@polkadot/util": "9.2.1",
+    "@polkadot/keyring": "9.2.1",
     "bn.js": "4.12.0"
   },
   "dependencies": {
     "@polkadot/api": "^8.5.1",
+    "@polkadot/keyring": "9.2.1",
     "@polkadot/extension-dapp": "^0.43.2",
     "@polkadot/ui-shared": "^2.2.1",
     "@walletconnect/client": "2.0.0-alpha.26",
