--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   english_words: ^4.0.0
   bruno: ^2.2.0
   flutter_screenutil: ^5.0.0+2
-  polkawallet_sdk: ^0.4.8
-  polkawallet_ui: ^0.4.8
+  polkawallet_sdk: ^0.5.0
+  polkawallet_ui: ^0.5.0
   flutter_svg: ^1.0.3
   json_annotation: ^4.4.0
   mobx: ^2.0.7+4
@@ -43,6 +43,7 @@ dependencies:
   ele_progress: ^0.0.1
   flutter_keyboard_visibility: ^5.3.0
   auto_size_text: ^3.0.0
+  hash: ^1.0.1
 
 dev_dependencies:
   flutter_test:
