--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
   polkawallet_ui: ^0.5.0
   flutter_svg: ^1.0.3
   json_annotation: ^4.4.0
-  mobx: ^2.0.7+4
-  flutter_mobx: ^2.0.6+1
+  convert: ^3.0.1
+  mobx: ^2.0.7
+  flutter_mobx: ^2.0.0
   get_storage: ^2.0.2
   flustars: ^2.0.1
   flukit: ^3.0.1
@@ -51,9 +52,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   json_serializable: ^6.0.0
-  build_runner: ^2.2.0
-  mobx_codegen: ^2.0.7
-  flutter_launcher_icons: ^0.10.0
+  build_runner: ^2.0.3
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
