--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   flutter_svg: ^1.0.3
   json_annotation: ^4.4.0
   convert: ^3.0.1
-  mobx: ^2.0.7
-  flutter_mobx: ^2.0.0
+  mobx: ^2.0.7+7
+  flutter_mobx: ^2.0.6+3
   get_storage: ^2.0.2
   flustars: ^2.0.1
   flukit: ^3.0.1
@@ -45,6 +45,8 @@ dependencies:
   flutter_keyboard_visibility: ^5.3.0
   auto_size_text: ^3.0.0
   hash: ^1.0.1
+  # Downgrade web3dart to 2.3.5 due to issue: `flutter pub run build_runner` failed
+  web3dart: 2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -52,8 +54,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   json_serializable: ^6.0.0
-  build_runner: ^2.0.3
-  mobx_codegen: ^2.0.1+3
+  build_runner: ^2.2.1
+  mobx_codegen: ^2.0.7+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
