--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
-  bruno: ^2.2.0
+  bruno: ^3.1.0
   flutter_screenutil: ^5.0.0+2
   polkawallet_sdk: ^0.5.0
   polkawallet_ui: ^0.5.0
@@ -50,6 +50,7 @@ dependencies:
   web3dart: 2.3.5
   flutter_secure_storage: ^6.1.0
   realm: 0.8.0+rc
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,8 @@ dev_dependencies:
   json_serializable: ^6.0.0
   build_runner: ^2.2.1
   mobx_codegen: ^2.0.7+2
+  flutter_launcher_icons: any
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,6 +81,7 @@ flutter:
 
     - js_service/dist/main.js
 
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -89,22 +93,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+#  fonts:
+#   - family: Unbounded
+#     fonts:
+#       - asset: assets/google_fonts/Unbounded-ExtraLight.ttf
+#         weight: 200
+#       - asset: assets/google_fonts/Unbounded-Light.ttf
+#         weight: 300
+#       - asset: assets/google_fonts/Unbounded-Regular.ttf
+#         weight: 400
+#       - asset: assets/google_fonts/Unbounded-Medium.ttf
+#         weight: 500
+#       - asset: assets/google_fonts/Unbounded-Bold.ttf
+#         weight: 700
+#       - asset: assets/google_fonts/Unbounded-Black.ttf
+#         weight: 900
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flutter_icons:
-  android: true
   ios: true
-  image_path: "assets/images/icon/logo-1024.png"
+  android: true
+  image_path_ios: "assets/images/launcher/logo-512.png"
+  image_path_android: "assets/images/launcher/logo-512.png"
