--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_secure_storage: ^6.1.0
   realm: 0.8.0+rc
   google_fonts: ^3.0.1
+  sec: ^1.0.1
 
 dev_dependencies:
   flutter_test:
