--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   realm: 0.8.0+rc
   google_fonts: ^3.0.1
   sec: ^1.0.1
+  flutter_custom_dialog: ^1.3.0
 
 dev_dependencies:
   flutter_test:
