--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,13 @@ dependencies:
   # Downgrade web3dart to 2.3.5 due to issue: `flutter pub run build_runner` failed
   web3dart: 2.3.5
   flutter_secure_storage: ^6.1.0
-  realm: 0.8.0+rc
+  realm: 1.0.1
   google_fonts: ^3.0.1
   sec: ^1.0.1
   flutter_custom_dialog: ^1.3.0
+  flutter_scankit: ^1.2.4
+  flutter_easy_permission: ^1.1.2
+  flutter_sticky_header: ^0.6.5
 
 dev_dependencies:
   flutter_test:
